--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,6 +11,10 @@ steps:
     name: 'gcr.io/cloud-builders/docker'
     args: ['exec', '-t', 'app', 'cp', '.env.example', '.env']
 
+  - id: "Copiando .env.testing"
+    name: 'gcr.io/cloud-builders/docker'
+    args: ['exec', '-t', 'app', 'cp', '.env.testing.example', '.env.testing']
+
   - id: "Rodando key:generate"
     name: 'gcr.io/cloud-builders/docker'
     args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
