--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     build: .
-    container_name: app
+    container_name: micro-videos-app
     #    entrypoint: dockerize -template ./.docker/app/.env:./.env -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
     #    environment:
     #      - DB_HOST=db
@@ -22,7 +22,7 @@ services:
 
   nginx:
     build: .docker/nginx
-    container_name: nginx
+    container_name: micro-videos-nginx
     restart: always
     tty: true
     #    command: /bin/bash -c "dockerize -template /etc/nginx/conf.d/nginx.tmpl:/etc/nginx/conf.d/nginx.conf && exec nginx -g 'daemon off;'"
@@ -42,15 +42,16 @@ services:
   db:
     image: mysql:5.7
     command: --innodb-use-native-aio=0
-    container_name: db
+    container_name: micro-videos-db
     restart: always
     tty: true
     ports:
-      - "3306:3306"
+      - "33006:3306"
     volumes:
       - ./.docker/dbdata:/var/lib/mysql
+      - ./.docker/mysql:/docker-entrypoint-initdb.d
     environment:
-      - MYSQL_DATABASE=laravel
+      - MYSQL_DATABASE=code_micro_videos
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=root
     networks:
@@ -58,7 +59,7 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: micro-videos-redis
     expose:
       - 6379
     networks:
