--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,24 +5,24 @@ steps:
 
   - id: "Rodando composer install"
     name: 'gcr.io/cloud-builders/docker'
-    args: ['exec', '-t', 'app', 'composer', 'install']
+    args: ['exec', '-t', 'micro-videos-app', 'composer', 'install']
 
   - id: "Copiando .env"
     name: 'gcr.io/cloud-builders/docker'
-    args: ['exec', '-t', 'app', 'cp', '.env.example', '.env']
+    args: ['exec', '-t', 'micro-videos-app', 'cp', '.env.example', '.env']
 
   - id: "Copiando .env.testing"
     name: 'gcr.io/cloud-builders/docker'
-    args: ['exec', '-t', 'app', 'cp', '.env.testing.example', '.env.testing']
+    args: ['exec', '-t', 'micro-videos-app', 'cp', '.env.testing.example', '.env.testing']
 
   - id: "Rodando key:generate"
     name: 'gcr.io/cloud-builders/docker'
-    args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
+    args: ['exec', '-t', 'micro-videos-app', 'php', '/var/www/artisan', 'key:generate']
 
   - id: "Rodando migrations"
     name: 'gcr.io/cloud-builders/docker'
-    args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate']
+    args: ['exec', '-t', 'micro-videos-app', 'php', '/var/www/artisan', 'migrate']
 
   - id: "Rodando Tests"
     name: 'gcr.io/cloud-builders/docker'
-    args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'test']
+    args: ['exec', '-t', 'micro-videos-app', 'php', '/var/www/artisan', 'test']
