--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^1.0"
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.7",
-        "beyondcode/laravel-dump-server": "^1.3",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
