--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     restart: always
     tty: true
     ports:
-      - "8000:80"
+      - "8080:80"
     volumes:
       - .:/var/www
     networks:
@@ -34,8 +34,7 @@ services:
       - app
 
   db:
-    image: mysql:5.7
-    command: --innodb-use-native-aio=0
+    build: ./.docker/mysql
     container_name: micro-videos-db
     restart: always
     tty: true
