--- a/.docker/app/.env
+++ b/.docker/app/.env
@@ -46,3 +46,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLOUD_PROJECT_ID=codeeducation-test-275100
+GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
+GOOGLE_CLOUD_STORAGE_BUCKET=codeflix-micro-videos
+GOOGLE_CLOUD_STORAGE_API_URI=https://storage.googleapis.com/codeflix-micro-videos
