feat: Terminando uploads do model vídeo

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:cxAzCqu6tQtmNeu92Dv2ZLo2nHaqvhiPYITQiVn90fg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
