--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,3 +51,5 @@ GOOGLE_CLOUD_PROJECT_ID=codeeducation-test-275100
 GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
 GOOGLE_CLOUD_STORAGE_BUCKET=codeflix-micro-videos
 GOOGLE_CLOUD_STORAGE_API_URI=https://storage.googleapis.com/codeflix-micro-videos
+
+CORS_ORIGINS=http://localhost:3000
