--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/mui-datatables": "^3.4.1",
+    "@types/mui-datatables": "^3.4.0",
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/route-parser": "^0.1.3",
     "axios": "^0.20.0",
-    "mui-datatables": "^3.5.0",
+    "date-fns": "^2.16.1",
+    "mui-datatables": "^3.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
