--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,16 +16,19 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/route-parser": "^0.1.3",
+    "@types/yup": "^0.29.11",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "mui-datatables": "^3.4.0",
+    "notistack": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "route-parser": "0.0.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
