--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.167",
     "@types/mui-datatables": "^3.4.4",
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
@@ -19,6 +20,7 @@
     "@types/yup": "^0.29.11",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
+    "lodash": "^4.17.20",
     "mui-datatables": "^3.4.0",
     "notistack": "^1.0.3",
     "react": "^16.13.1",
