--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "superbalist/laravel-google-cloud-storage": "^2.2"
+        "superbalist/laravel-google-cloud-storage": "^2.2",
+        "tucker-eric/eloquentfilter": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
