ajustes nos testes

--- a/backend/.env.testing.example
+++ b/backend/.env.testing.example
@@ -53,3 +53,5 @@ GOOGLE_CLOUD_STORAGE_BUCKET=codeflix-micro-videos
 GOOGLE_CLOUD_STORAGE_API_URI=https://storage.googleapis.com/codeflix-micro-videos
 
 TESTING_PROD=false
+
+CORS_ORIGINS="http://localhost:3000,http://localhost"
