--- a/backend/.env.example
+++ b/backend/.env.example
@@ -52,4 +52,4 @@ GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
 GOOGLE_CLOUD_STORAGE_BUCKET=codeflix-micro-videos
 GOOGLE_CLOUD_STORAGE_API_URI=https://storage.googleapis.com/codeflix-micro-videos
 
-CORS_ORIGINS=http://localhost:3000
+CORS_ORIGINS="http://localhost:3000,http://localhost"
